<resources>
    <string name="app_name">Terminal</string>
    <string name="seccao">Secção</string>
    <string name="toolbarTitle">Toolbar text</string>
    <string name="aguarde">…</string>
    <string name="opcoes_upper">OPÇÕES</string>
    <string name="stop_upper">STOP</string>
    <string name="iniciar_upper">INICIAR</string>
    <string name="continuar_upper">CONTINUAR</string>

    <string name="maquina">Máquina</string>
    <string name="operadorCodigo">Operador</string>
    <string name="ok">OK</string>
    <string name="estado">Estado</string>
    <string name="reticencias">…</string>
    <string name="eliminar_db">Eliminar DataBase</string>
    <string name="TOTAL">TOTAL</string>
    <string name="PARTE">PARTE</string>
    <string name="toast_playservices_unrecoverable">necessário instalar google play services!</string>
    <string name="service_name">firebase_sms_listener</string>
    <string name="sms_maquina">SMS máquina</string>
    <string name="sms_operador">SMS operador</string>
    <string name="fechar">fechar</string>
    <string name="questao_clicar_novamente_fecho">toque novamente para encerrar sessão</string>
</resources>
